fixed mobile overflow bug

--- a/client/src/pages/messenger.css
+++ b/client/src/pages/messenger.css
@@ -21,6 +21,7 @@
 .chatBox{
     flex:8;
     height: 80%;
+    width: 100%;
      /* overflow-y:scroll;
 } */
 }
